--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -19,4 +19,4 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
       - name: Run script
-        run: main.py
+        run: Main.py
