--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -1,22 +1,30 @@
-name: Executar Script Python 2 
+name: Python Script Execution Workflow
 
 on:
-  schedule:
-    - cron: '* * * * *'
+  push:
+    branches:
+      - master
 
 jobs:
-  run_script:
+  build:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.10'  # Escolha a versão do Python que você usa
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
-      - name: Run script
-        run: python Main.py
+    - name: Checkout code
+      uses: actions/checkout@v4
+
+    - name: Set up Python 3.10
+      uses: actions/setup-python@v4
+      with:
+        python-version: '3.10'
+
+    - name: List files in the directory
+      run: ls -la
+
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+
+    - name: Run Main.py
+      run: python Main.py
