--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -6,27 +6,23 @@ on:
       - master
 
 jobs:
-  build:
+  run-python:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
-
-    - name: Set up Python 3.10
-      uses: actions/setup-python@v4
-      with:
-        python-version: '3.10'
-
-    - name: Check current directory and list files
-      run: |
-        pwd
-        ls -la
-
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-
-    - name: Run Main.py
-      run: python Main.py
+      - name: Checkout code
+        uses: actions/checkout@v4
+  
+      - name: Set up Python 3.11
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.11'   
+  
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+  
+      - name: Run Main.py
+        run: 
+          python Main.py
