--- a/.github/workflows/python-app222.yml
+++ b/.github/workflows/python-app222.yml
@@ -22,4 +22,6 @@ jobs:
           pip install -r requirements.txt
 
       - name: execute py script # run main.py
+        env:
+          GOOGLE_TOKEN_BASE64: ${{ secrets.GOOGLE_TOKEN_BASE64 }}
         run: python Main.py
