--- a/.github/workflows/python-app222.yml
+++ b/.github/workflows/python-app222.yml
@@ -21,5 +21,7 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
-      - name: execute py script # run main.py        
+      - name: execute py script # run main.py
+        env:
+          GOOGLE_TOKEN_BASE64: ${{ secrets.GOOGLE_TOKEN_BASE64 }}
         run: python Main.py
