--- a/.github/workflows/python-app222.yml
+++ b/.github/workflows/python-app222.yml
@@ -1,4 +1,4 @@
-name: run main.py
+name: run Main.py
 
 on:
   schedule:
@@ -9,14 +9,17 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: checkout repo content
-        uses: actions/checkout@v4 # checkout the repository content
+        uses: actions/checkout@v2 # checkout the repository content
 
       - name: setup python
         uses: actions/setup-python@v4
         with:
           python-version: '3.10' # install the python version needed
 
-      - name: install python packages
+      - name: List files in the repository
+        run: ls -la
+
+      - name: Install python packages
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
