--- a/.github/workflows/python-app222.yml
+++ b/.github/workflows/python-app222.yml
@@ -8,6 +8,8 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
+      - name: Clean workspace
+        run: sudo rm -rf *
       - name: checkout repo content
         uses: actions/checkout@v2 # checkout the repository content
 
