--- a/.github/workflows/python-app222.yml
+++ b/.github/workflows/python-app222.yml
@@ -12,6 +12,8 @@ jobs:
         run: sudo rm -rf *
       - name: checkout repo content
         uses: actions/checkout@v2 # checkout the repository content
+        with:
+          fetch-depth: 0
 
       - name: setup python
         uses: actions/setup-python@v4
