--- a/.github/workflows/python-app222.yml
+++ b/.github/workflows/python-app222.yml
@@ -3,8 +3,7 @@ name: run Main.py
 on:
   workflow_dispatch:
   schedule:
-    - cron: '0 0 * * 1' # At 00:00 on Monday
-
+    - cron: '*/10 * * * *'
 jobs:
   build:
     runs-on: ubuntu-latest
