--- a/.github/workflows/python-app222.yml
+++ b/.github/workflows/python-app222.yml
@@ -3,7 +3,7 @@ name: run Main.py
 on:
   workflow_dispatch:
   schedule:
-    - cron: '0 */8 * * *'
+    - cron: '0 * * * *'
 jobs:
   build:
     runs-on: ubuntu-latest
